# madskills

./: .editorconfig  .env.rust  .gitattributes  .gitignore  .justfile  .markdownlint.yaml  .rustfmt.toml  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  MSRV.md  README.md  cog.toml
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/commands/: check.md  clippy.md  crate-version.md  fix.md  fmt.md  handoff.md  merge.md  pickup.md  pr.md  push.md  report.md  tests.md
.claude/skills/recording-decisions/: ADR_TEMPLATE.md
.claude/skills/using-git/: SKILL.md
.github/: CACHING.md  dist-build-setup.yml
.github/actions/setup-cargo-tools/: action.yml
.github/workflows/: bump.yml  ci.yml  dependabot-issues.yml  publish-cargo.yml  release.yml
crates/madskills/: CHANGELOG.md  Cargo.toml
crates/madskills-core/: CHANGELOG.md  Cargo.toml
crates/madskills-core/src/: discovery.rs  error.rs  lib.rs  markdown.rs  models.rs  output.rs  parser.rs  validator.rs
crates/madskills-core/src/validator/: best_practices.rs  helpers.rs
crates/madskills-core/src/validator/best_practices_tests/: as001_as010.rs  as011_as020.rs  mod.rs
crates/madskills-rules/: Cargo.toml
crates/madskills-rules/src/: lib.rs
crates/madskills-rules/src/rules/: mod.rs
crates/madskills/src/: lib.rs  main.rs
crates/madskills/src/commands/: fmt.rs  init.rs  lint.rs  list.rs  mod.rs
crates/madskills/tests/: cli.rs
docs/decisions/: README.md
docs/rules/: AS001.md  AS002.md  AS003.md  AS004.md  AS005.md  AS006.md  AS007.md  AS008.md  AS009.md  AS010.md  AS011.md  AS012.md  AS013.md  AS014.md  AS015.md  AS016.md  AS017.md  AS018.md  AS019.md  AS020.md
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: install.rs  man.rs  mod.rs
