[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"
rust-version = "1.91.0"
readme = "README.md"
authors = ["Clay Loveless <clay@loveless.net>"]
description = "Got a skill issue? madskills fixes it -- the toolchain for madskilling: lint, fmt, and wrangle Agent Skills like you mean it."
keywords = []
categories = []

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-apple-darwin",
]
tap = "madskilling/homebrew-brew"
publish-jobs = ["homebrew"]
# if yaml format issues continue to be a problem, turn this on
# allow-dirty = ["ci"]
pr-run-mode = "upload"
github-release = "auto"
cargo-auditable = true

[workspace.metadata.dist.github-action-commits]
"actions/checkout" = "v6"
"actions/upload-artifact" = "v6"
"actions/download-artifact" = "v7"
